# QuantProject

./: -  .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Backtest_1-1_report_20250612_113000.html  Backtest_1-1_report_20250612_113619.html  Backtest_1-1_report_20250612_114534.html  Backtest_2-1_report_20250612_113121.html  Backtest_2-2_report_20250612_120020.html  BacktestingPyAdapter_abstract_strategy_class-AbstractE_,strategy_params-_.html  CAPITAL_API_STATUS.md  COMPLEXITY_ANALYSIS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLAN.md  DEVOPS_COMPLETION_REPORT.md  Dockerfile  FILE_GUIDE.md  LAUNCH_ALL.bat  MIGRATION.md  MONITOR_TRADING.bat  Makefile  NEXT_PHASE_PLAN.md  NEXT_PHASE_TASKS.md  NEXT_TASKS_ASSIGNMENT.md  PPO_LIVE_MONITOR.py  PPO_LIVE_TRADER.py  PPO_MONITOR_FINAL.py  PPO_UNIFIED_MONITOR.py  PPO_訓練數據說明.md  PROJECT_STRUCTURE.md  README.md  README_DETAILED.md  RUN_FULL_TRAINING.bat  RUN_PPO_MONITOR.bat  RUN_PPO_MONITOR_FINAL.bat  RUN_PPO_TRADER.bat  RUN_SIMPLE_TRADER.bat  SIMPLE_TRADER_GUIDE.md  (+283 more)
.claude/: settings.local.json
.cloud/: README.md  capital_agent.md  de_agent.md  devops_agent.md  fullstack_agent.md  ml_agent.md  pm_agent.md  qa_agent.md  quant_agent.md  security_agent.md
adapters/: backtesting_adapter.py  live_trading_adapter.py
backtesting_scripts/: portfolio_backtest.py  quick_test.py  report_generator.py  run_all_levels.py  run_confluence_backtest.py  run_multi_level_strategy.py  run_portfolio_backtest.py  run_random_sample_backtest.py  run_rsi_ma_kd_backtest.py  run_three_level_strategy.py  test_single_stock.py  test_three_level.py
checkpoints/: batch_validation_checkpoint.json  download_checkpoint.json  quick_validation_checkpoint.json
config/: .secret_key  .tokens.enc  api_config.json  api_credentials_template.json  config.py  data_sources.json  live_trading_config.json  rl3_portfolio_local.yaml
configs/: data.yaml  env_mixed60m.yaml
core/: __init__.py  config.py  event.py  event_loop.py  event_types.py  utils.py
dashboard/: charts.py  data_connector.py  main_dashboard.py
data/: all_symbols.txt  data_validation_report.json  dow.txt  live_feed.py  nasdaq.txt  performance_metrics.json  popular.txt  real_backtest_results.json  sp500.txt  tier_a.txt  tier_b.txt  tier_s.txt
data_feeds/: capital_live_feed.py  feed_handler.py  historical_feed_handler.py
data_pipeline/: __init__.py  free_data_client.py  live_feed.py
docs/: SYSTEM_OPERATION_MANUAL.md  refactor-log.md
documents/: Alpaca影響評估.md  DEVOPS_FIX_GUIDE.md  NEXT_PHASE_PLAN.md  PM_PROGRESS_REPORT.md  SYSTEM_GUIDE.md  TODO.md  TODO_Capital_Integration.md  TODO_MT4_Integration.md  數據源配置方案B.md  需求文檔.md
eval/: metrics.py  reports.py
examples/: demo_complete.py  logging_example.py  run_demo.py  run_ml_strategy_demo.py
execution/: __init__.py  async_execution_handler.py  broker.py  capital_client.py  execution_handler.py  portfolio.py
infra/: publish_to_sns.py  state_writer.py
line-trade-bot/: README.md  template.yaml
live_trading_app/: capital_execution_handler.py  capital_live_trading.py  check_positions.py  crypto_live_trading.py  main_live.py  main_live_debug.py  main_live_simple.py  monitor_system.py  multi_stock_main_live.py  simple_execution_handler.py  simple_portfolio_manager.py  test_btc_epic.py  test_capital_api.py  test_crypto_epics.py
monitoring/: __init__.py  alerts.yml  config.yaml  demo_tiered_monitoring.py  prometheus.yml  signal_scanner.py  tiered_monitor.py
mt4_bridge/: DWX_SETUP_GUIDE.md  DWX_ZeroMQ_Connector_v2_0_1_RC8.py  MT4_SETUP_GUIDE.md  QUICK_START.md  README.md  account_monitor.py  config.py  connector.py  data_collector.py  integration_example.py  setup_guide.md  signal_sender.py  test_mt4_bridge.py  (+2 more)
(+5108 files in other folders)
